remove min-height to avoid scrollbar

--- a/app/less/app.less
+++ b/app/less/app.less
@@ -48,7 +48,6 @@ body {
 
 .notes {
   margin: @view-padding;
-  min-height: 600px;
 }
 
 .gridster {
